--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>AngularJS - Directives</title>
-	<base href="/serbisyo/">
+	<!-- <base href="/serbisyo/"> -->
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.min.css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/toastr/toastr.min.css" />
