--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html class="no-js" ng-app="App" ng-controller="MainCtrl">
 <head>
 	<meta charset="utf-8">
-	<title>AngularJS - Directives</title>
-	<base href="/">
+	<title>Serbisyo.com</title>
+
+	<link rel="icon" type="image/png" href="images/favicon.png" />
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.min.css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/toastr/toastr.min.css" />
