modified search page

--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,10 @@
 	<title>AngularJS - Directives</title>
 	<base href="/">
 	<link rel="icon" type="image/png" href="images/favicon.png">
-	<link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
-	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.min.css" />
-	<link rel="stylesheet" type="text/css" href="bower_components/toastr/toastr.min.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
+	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.min.css" /> -->
+	<link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
+	<link rel="stylesheet" type="text/css" href="styles/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="styles/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
@@ -16,7 +17,6 @@
 	<div ng-view></div>
 
 	<!-- <div ng-include="'views/dialogs/dialog.html'"></div> -->
-
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/angular/angular.min.js"></script>
@@ -28,10 +28,10 @@
 
 	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-	<script src="bower_components/toastr/toastr.min.js"></script>
+	<script src="bower_components/angular-toastr/dist/angular-toastr.min.js"></script>
+	<script src="bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
 
 	<script src="scripts/app.js"></script>
-
 	<script src="scripts/filter.js"></script>
 
 	<script src="scripts/confirmDialogCtrl.js"></script>
