--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>AngularJS - Directives</title>
 	<base href="/">
+	<link rel="icon" type="image/png" href="images/favicon.png">
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.min.css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/toastr/toastr.min.css" />
