--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
 	<div ng-view></div>
 
-	<!-- <div ng-include="'views/dialogs/dialog.html'"></div> -->
+	<!-- <div ng-include="'views/dialogs/serviceAssetDialog.html'"></div> -->
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/angular/angular.min.js"></script>
@@ -29,6 +29,7 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/angular-resource/angular-resource.min.js"></script>
+	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
 	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -37,6 +38,7 @@
 
 	<script src="scripts/app.js"></script>
 	<script src="scripts/filter.js"></script>
+	<script src="scripts/directive.js"></script>
 
 	<script src="scripts/confirmDialogCtrl.js"></script>
 	<script src="scripts/headerCtrl.js"></script>
