--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html class="no-js" ng-app="App" ng-controller="MainCtrl">
 <head>
-	<meta charset="utf-8">
-	<title>AngularJS - Directives</title>
 	<base href="/">
-	<link rel="icon" type="image/png" href="images/favicon.png">
+	<meta charset="utf-8" />
+	<meta name="fragment" content="!" />
+	<meta name="format-detection" content="telephone-no" />
+	<meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width, height=device-height" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<title>Serbisyo.com</title>
+	<link rel="icon" type="image/png" href="images/favicon.png" />
 	<!-- <link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css" />
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-ui/build/angular-ui.min.css" /> -->
 	<link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css" />
