converted search page to directives

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 
 	<script src="scripts/confirmDialogCtrl.js"></script>
 	<script src="scripts/headerCtrl.js"></script>
+	<script src="scripts/homeCtrl.js"></script>
 	<script src="scripts/mainCtrl.js"></script>
 	<script src="scripts/searchCtrl.js"></script>
 
